# vurtis

./: .gitignore  CMakeLists.txt  LICENSE  README.md  plots.py
examples/: CMakeLists.txt  plots.py  simple_example.cpp
examples/data/: trajectory_curve_20Hz.csv
examples/unicycle_regulation/: CMakeLists.txt  cost_function.h  plots.py  regulation.cpp  solver_sensitivity.h  unicycle_model.h
examples/unicycle_tracking/: CMakeLists.txt  plots.py  simple_example.cpp
examples/unicycle_tracking/data/: state_trajectory.csv
include/: csvparser.h  csvparser.hpp  toml.h
include/autodiff/: CMakeLists.txt
include/vurtis/: cost_base.h  model_base.h  parameters_base.h  setup.h  solver.h  solver_prox.h  utils.h  vurtis.h
src/: example_no_constraints.cpp  simple_example.cpp
